benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-mix028_tso.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix028_tso.yml/mix028_tso.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix028_tso.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_mvinfqth/tmp/tmp8co14khk.c
Compilation started
/tmp/BenchExec_run_mvinfqth/tmp/tmp8co14khk.c: In function ‘P2’:
/tmp/BenchExec_run_mvinfqth/tmp/tmp8co14khk.c:616:19: error: ‘FALSE’ undeclared (first use in this function)
  616 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_mvinfqth/tmp/tmp8co14khk.c:616:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_mvinfqth/tmp/tmp8co14khk.c:617:19: error: ‘TRUE’ undeclared (first use in this function)
  617 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_mvinfqth/tmp/tmp8co14khk.c: In function ‘main’:
/tmp/BenchExec_run_mvinfqth/tmp/tmp8co14khk.c:691:19: error: ‘FALSE’ undeclared (first use in this function)
  691 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
